--- a/public/georoute.html
+++ b/public/georoute.html
@@ -8,7 +8,7 @@
 
      <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    
+     <link rel="stylesheet" href="/css/loader.css">
      <link rel="stylesheet" href="/css/georoutestyles.css">
 
     <!-- Mapbox CDN -->
@@ -88,7 +88,11 @@
 
             </div>
 
-            <div class="col-md-9" id='map' style="height: 100vh;"></div>
+            <div class="col-md-9" id='map' style="height: 100vh;">
+              <div class="spinner-wrapper">
+                <div class="lds-dual-ring"></div>
+            </div>
+            </div>
 
         </div>
 
@@ -106,8 +110,8 @@
     <script src="/js/logout.js"></script>
     <script src='/js/resolveName.js'></script>
     <script src="/js/token.js"></script>
+    <script src="/js/loader.js"></script>
     <script src="/js/georouteMap.js"></script>
-    <script src="/js/onLoadGeoRoute.js"></script>
     <script src='/js/geoRouteDraw.js'></script>
     <script src='/js/setGeoRoute.js'></script>
     <script src='/js/geoRouteDrawHandler.js'></script>
