Add Responsive Flex classes

--- a/public/geofence.html
+++ b/public/geofence.html
@@ -60,9 +60,9 @@
 
     
 
-        <div class="d-flex flex-row">
+    <div class="d-flex flex-column flex-md-row">
           
-            <div class="col-md-3 mt-2">
+      <div class="col-12 col-md-3 mt-2">
 
               <div class="row mb-2" id="geoFenceViewContainer">
 
@@ -87,7 +87,7 @@
 
             </div>
 
-            <div class="col-md-9" id='map' style="height: 100vh;">
+            <div class="col-12 col-md-9 mobileViewStretch ml-auto mr-auto" id='map' style="height: 100vh;">
               <div class="spinner-wrapper">
                 <div class="lds-dual-ring"></div>
             </div></div>
